<resources>
    <string name="app_name">Pizza X</string>

    <string name="businessName" translatable="false">Pizza X</string>
    <string name="businessMotto">Best pizza. Anywhere, anytime.</string>
    <string name="directions">Directions</string>
    <string name="website" translatable="false">www.pizzax.ro</string>
    <string name="phone" translatable="false">+40-730-00-00-00</string>
    <string name="e_mail" translatable="false">order@pizzax.ro</string>
    <string name="address">3 A.I. Cuza Bvd., Slatina</string>

</resources>
