<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="udacityscholarship.raul.pizzax.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/noHeight"
        android:layout_weight="1.7"
        android:clipChildren="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pizza_pic"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/noHeight"
            android:layout_weight="1"
            android:contentDescription="@string/businessName"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false">

            <TextView
                android:id="@+id/business_name"
                style="@style/text.title.large"
                android:text="@string/businessName" />

            <TextView
                style="@style/text.title.medium"
                android:layout_below="@id/business_name"
                android:text="@string/businessMotto" />


            <TextView
                style="@style/text.title.medium.right"
                android:drawableTop="@drawable/ic_direction"
                android:gravity="center"
                android:clickable="true"
                android:onClick="directions"
                android:text="@string/directions" />

        </RelativeLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/noHeight"
        android:layout_weight="2"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text.regular"
                android:text="@string/website"
                android:drawableStart="@drawable/ic_web"
                android:autoLink="all"
                android:linksClickable="true"/>

            <TextView
                style="@style/text.regular"
                android:text="@string/address"
                android:drawableStart="@drawable/ic_location" />

            <TextView
                style="@style/text.regular"
                android:text="@string/phone"
                android:drawableStart="@drawable/ic_phone"
                android:autoLink="all"
                android:linksClickable="true"/>

            <TextView
                style="@style/text.regular"
                android:text="@string/e_mail"
                android:drawableStart="@drawable/ic_mail"
                android:autoLink="all"
                android:linksClickable="true"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
